[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/CharacterCreator.gd" type="Script" id=1]
[ext_resource path="res://Scenes/CharacterSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/ui/whiteSquare.png" type="Texture" id=3]
[ext_resource path="res://Assets/ui/leftArrow.png" type="Texture" id=4]
[ext_resource path="res://Assets/ui/rightArrow.png" type="Texture" id=5]

[node name="CharacterCreator" type="Control"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="CharacterSprite" parent="Panel" instance=ExtResource( 2 )]
position = Vector2( 60, 70 )
scale = Vector2( 4, 4 )

[node name="SkinColorSquares" type="Control" parent="Panel"]
editor/display_folded = true
margin_left = -60.0
margin_top = -30.0
margin_right = -20.0
margin_bottom = 10.0
__meta__ = {
"_edit_lock_": true
}

[node name="Color1" type="TextureButton" parent="Panel/SkinColorSquares" groups=[
"color_btns",
]]
margin_left = 260.0
margin_top = 40.0
margin_right = 300.0
margin_bottom = 80.0
texture_normal = ExtResource( 3 )

[node name="Color2" type="TextureButton" parent="Panel/SkinColorSquares" groups=[
"color_btns",
]]
margin_left = 280.0
margin_top = 40.0
margin_right = 320.0
margin_bottom = 80.0
texture_normal = ExtResource( 3 )

[node name="Color3" type="TextureButton" parent="Panel/SkinColorSquares" groups=[
"color_btns",
]]
margin_left = 300.0
margin_top = 40.0
margin_right = 340.0
margin_bottom = 80.0
texture_normal = ExtResource( 3 )

[node name="Color4" type="TextureButton" parent="Panel/SkinColorSquares" groups=[
"color_btns",
]]
margin_left = 320.0
margin_top = 40.0
margin_right = 360.0
margin_bottom = 80.0
texture_normal = ExtResource( 3 )

[node name="Color5" type="TextureButton" parent="Panel/SkinColorSquares" groups=[
"color_btns",
]]
margin_left = 340.0
margin_top = 40.0
margin_right = 380.0
margin_bottom = 80.0
texture_normal = ExtResource( 3 )

[node name="LeftArrow" type="TextureButton" parent="Panel"]
margin_left = 3.10221
margin_top = 70.282
margin_right = 43.1022
margin_bottom = 110.282
texture_normal = ExtResource( 4 )

[node name="RightArrow" type="TextureButton" parent="Panel"]
margin_left = 84.6416
margin_top = 70.282
margin_right = 124.642
margin_bottom = 110.282
texture_normal = ExtResource( 5 )

[node name="HairStyleOption" type="ItemList" parent="Panel"]
margin_left = 200.0
margin_top = 40.0
margin_right = 300.0
margin_bottom = 80.0

[node name="Create" type="Button" parent="Panel"]
margin_left = 33.9483
margin_top = 157.462
margin_right = 86.9483
margin_bottom = 177.462
text = "Create"

[node name="Randomize" type="Button" parent="Panel"]
margin_left = 20.8694
margin_top = 133.959
margin_right = 103.869
margin_bottom = 153.959
text = "Randomize"

[node name="Labels" type="Control" parent="Panel"]
editor/display_folded = true
margin_left = 120.0
margin_top = 14.0
margin_right = 160.0
margin_bottom = 54.0

[node name="skinToneLabel" type="Label" parent="Panel/Labels"]
margin_right = 65.0
margin_bottom = 14.0
text = "Skin Tone:"

[node name="hairStylesLabel" type="Label" parent="Panel/Labels"]
margin_top = 26.0
margin_right = 72.0
margin_bottom = 40.0
text = "Hair Styles:"

[node name="hairColor" type="Label" parent="Panel/Labels"]
margin_top = 106.0
margin_right = 67.0
margin_bottom = 120.0
text = "Hair Color:"

[node name="ColorPickerControl" type="Control" parent="Panel"]
editor/display_folded = true
margin_left = 199.763
margin_top = 80.0
margin_right = 239.763
margin_bottom = 120.0
rect_scale = Vector2( 0.898807, 0.826937 )

[node name="ColorPicker" type="ColorPicker" parent="Panel/ColorPickerControl"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
rect_scale = Vector2( 0.417873, 0.41103 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="Panel/LeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="Panel/RightArrow" to="." method="_on_RightArrow_pressed"]
[connection signal="item_selected" from="Panel/HairStyleOption" to="." method="_on_HairStyleOption_item_selected"]
[connection signal="pressed" from="Panel/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Panel/Randomize" to="." method="_on_Randomize_pressed"]
[connection signal="color_changed" from="Panel/ColorPickerControl/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
